@@ -3,6 +3,7 @@
     * Improved rendering of the Beacon block
     * Implemented Anvil rendering
     * Removed spatial filtering in sample selection (improves performance)
+    * Added option to enable render clouds
 
 1.1.3 - 2013-01-14
     * Clicking in the map when it is maximally zoomed out will select an
